nullaway_error_2c3364c9-ec4d-4955-b537-ec46ca8b2601.txt
/home/nima/Developer/nullness-benchmarks/litiengine/src/de/gurkenlabs/litiengine/graphics/Spritesheet.java:194: error: [NullAway] dereferenced expression Resources.spritesheets().get(this.getName()) is @Nullable
    return Resources.spritesheets().contains(this.getName()) && Resources.spritesheets().get(this.getName()).equals(this);
                                                                                                            ^
    (see http://t.uber.com/nullaway )
